# ocaml-quantum-encryption

./: .gitignore  README.md  dune  dune-project  kyber.mli  ocaml_quantum_encryption.opam
_coverage/: index.html
_coverage/src/algorithm/logic/: kyber.ml.html
demo/: dune  miragecryptodemo.ml  owldemo.ml  polynomialsffdemo.ml  zarithdemo.ml
demo/ReScript/: README.md
src/: dune  submission.ml  submission.mli
src/Application/: README.md
src/Application/chat-app/: package-lock.json  package.json  rescript.json
src/Application/chat-app/src/: App.res  App.res.mjs
src/Application/chat-app/src/bindings/: ChatEncryption.res  ChatEncryption.res.mjs  Encryption.res  Encryption.res.mjs  kyber.res  kyber.res.mjs
src/Application/chat-app/src/components/: ChatBox.res  ChatBox.res.mjs  ChatInput.res  ChatInput.res.mjs  Login.res  Login.res.mjs  MessageType.res
src/Application/websocket-server/: package-lock.json  package.json  server.js
src/Application/websocket-server/src/: server.js
src/Encryption/: README.md
src/Encryption/chat_encryption/: chat_encryption.ml  chat_encryption.mli  dune
src/Encryption/kyber-KEM/: dune  kyber.ml  kyber.mli
src/Encryption/tests/: chat_encryption_tests.ml  dune  kyber_tests.ml  polynomial_tests.ml  test_runner.ml
src/algorithm/: README.md  dune  kyber-tests.mli  kyber.ml  kyber.mli
src/algorithm/logic/: dune  kyber.ml  kyber.mli
src/algorithm/tests/: dune  kyber_tests.ml  polynomial_tests.ml  test_runner.ml
src/application/: ui.mli
src/tentative-mli-files/: kyber-tests.mli  kyber.mli  ui.mli
test/: tests.ml
(+1 files in other folders)
