(library
  (name owldemo)
  (modules owldemo)
  (libraries
    core
    owl))

(library
  (name zarithdemo)
  (modules zarithdemo)
  (libraries
    zarith
    owl))

(library
  (name polynomialsdemo)
  (modules polynomialsffdemo)
  (libraries
    polynomial
    ff))

(library
  (name miragecrypto)
  (modules miragecryptodemo)
  (libraries
    mirage-crypto
    mirage-crypto-rng))
